--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 	<body>
 
 		<div class="reveal">
-
+			<div class="slides">
+				<section data-markdown="index.md"
+				         data-separator="^\n\n\n"
+				         data-vertical="^\n\n"
+				         data-notes="^Note:"
+				         data-charset="iso-8859-15">
+				</section>
+			</div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
